# precc

./: BENCHMARKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_skill.md
.github/workflows/: ci.yml
crates/precc-cli/: Cargo.toml
crates/precc-cli/skills/builtin/: bazel-wrong-dir.toml  cargo-wrong-dir.toml  go-wrong-dir.toml  gradle-wrong-dir.toml  maven-wrong-dir.toml  npm-wrong-dir.toml  terraform-wrong-dir.toml
crates/precc-cli/src/: embedded_skills.rs  main.rs
crates/precc-core/: Cargo.toml
crates/precc-core/src/: consent.rs  context.rs  db.rs  gdb.rs  lib.rs  metrics.rs  mining.rs  pipeline.rs  promote.rs  rewrites.rs  skills.rs  telemetry_schema.rs
crates/precc-core/src/compressors/: mod.rs  none.rs  rtk.rs
crates/precc-cursor-hook/: Cargo.toml
crates/precc-cursor-hook/src/: main.rs
crates/precc-hook/: Cargo.toml
crates/precc-hook/src/: main.rs
crates/precc-shell/: Cargo.toml
crates/precc-shell/src/: main.rs
docs/announce/: r-claudeai.md  r-rust.md  show-hn.md
examples/aider/: README.md
examples/cursor/: hooks.json
skills/builtin/: docker-compose-wrong-dir.toml  git-wrong-dir.toml  just-wrong-dir.toml  make-wrong-dir.toml  python-wrong-dir.toml
