[workspace]
resolver = "2"
members = [
    "crates/precc-core",
    "crates/precc-hook",
    "crates/precc-cursor-hook",
    "crates/precc-shell",
    "crates/precc-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/precc-cli/precc"
homepage = "https://github.com/precc-cli/precc"
authors = ["Yijun Yu"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
