[package]
name = "precc-cursor-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cursor beforeShellExecution hook binary for PRECC"

[dependencies]
precc-core = { path = "../precc-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
