[package]
name = "precc-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude Code PreToolUse:Bash hook binary for PRECC (< 5ms latency target)"

[dependencies]
precc-core = { path = "../precc-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
